# SecretGuard

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
docs/: installation.md  usage.md
examples/: vulnerable.env  vulnerable_config.py
rules/: __init__.py  patterns.json
secretguard/: __init__.py  cli.py  config.py  detector.py  reporter.py  scanner.py  utils.py
tests/: test_detector.py  test_scanner.py
